# ba-mdslam

./: .gitignore  LICENSE  README.md
configs/lidar/: long_os164_configuration.json  quad-easy_os0128_configuration.json  stairs_os0128_configuration.json  standard_os0128_configuration.json
configs/rgbd/: eth3d_configuration.json
docker/: Dockerfile  README.md  build.sh  run.sh
installation/: README.md
md_slam/: CMakeLists.txt  package.xml
md_slam/CMakeModules/: CudaAutoDetect.cmake
md_slam/apps/: CMakeLists.txt  ba.cpp  graph_converter.cpp  gt_mapper.cpp  show_graph.cpp  slam.cpp  variable_noise_adder.cpp
md_slam/apps/dataset_manipulators/: eth_dataset_manipulator.cpp  lidar_config_object.h  manip_utils.h  newer_college_dataset_manipulator.cpp
md_slam/apps/utils/: colorpointcloud.cpp  gt_mapper.cpp  pcldistancemaptraj.cpp  srrg2pcl.cpp  srrg2pclfull.cpp  standard_ba_configuration.h  trajrosbagcloud2srrg.cpp  utils.h  variable_noise_adder.cpp
md_slam/apps/viewer/: camera_pose_vbo.cpp  camera_pose_vbo.h  cloud_vbo.cpp  cloud_vbo.h  drawable_base_vbo.cpp  drawable_base_vbo.h  drawable_factor_graph_vbo.cpp  drawable_factor_graph_vbo.h  drawable_pyramid_variable_se3.cpp  drawable_pyramid_variable_se3.h  factors_binary_vbo.cpp  factors_binary_vbo.h  get_pcl_offset.h  md_ba_viewer.h  md_slam_viewer.cpp  md_slam_viewer.h  spline.cpp  spline.h  vbo_base.cpp  vbo_base.h
md_slam/src/md_slam/: CMakeLists.txt  cuda_utils.cuh  dual_matrix.cu  dual_matrix.cuh  factor.cpp  factor.cu  factor.cuh  factor.h  factor_bi.cpp  factor_bi.cu  factor_bi.cuh  factor_bi.h  factor_common.cpp  factor_common.cu  factor_common.cuh  factor_common.h  factor_stack.cpp  factor_stack.h  frame.cpp  frame.h  graph_manager.cpp  graph_manager.h  image_pyramid.cpp  image_pyramid.h  instances.cpp  instances.h  linear_system_entry.cuh  loop_closer.cpp  loop_closer.h  loop_detector_base.cpp  loop_detector_base.h  loop_detector_hbst.cpp  loop_detector_hbst.h  loop_validator.cpp  loop_validator.h  orientation_estimator.h  pairwise_aligner.cpp  pairwise_aligner.h  pyramid_generator.cpp  pyramid_generator.h  (+16 more)
md_slam/tests/: CMakeLists.txt  test_dual_buffer.cu  test_factor.cpp  test_factor_bi.cpp  test_projection.cu  test_sum_reduction.cu
